[gd_scene load_steps=4 format=3 uid="uid://5u3fomxxg0pd"]

[ext_resource type="Script" path="res://assets/Scripts/start_CanvasLayer.gd" id="1_j352u"]
[ext_resource type="Texture2D" uid="uid://d5ujs52ibl4f" path="res://assets/Textures/pictures/mato.png" id="2_lamqs"]
[ext_resource type="PackedScene" uid="uid://ba81hcv04dygg" path="res://scenes/utils/FadeScene.tscn" id="3_7x2wm"]

[node name="MainMenu" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_j352u")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lamqs")
expand_mode = 1

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CANGACO"

[node name="Button_start" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Iniciar"

[node name="Button_exit" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="FadeScene" parent="." instance=ExtResource("3_7x2wm")]
visible = false

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Button_start" to="CanvasLayer" method="_on_button_start_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Button_exit" to="CanvasLayer" method="_on_button_exit_pressed"]
[connection signal="transitioned_black" from="FadeScene" to="CanvasLayer" method="_on_fade_scene_transitioned_black"]
